--- a/assets/index.html
+++ b/assets/index.html
@@ -10,6 +10,7 @@
   <canvas id="renderCanvas"></canvas>
 
   <script type="text/javascript" src="babylon.2.4.max.js"></script>
+  <script type="text/javascript" src="pep.js"></script>
   <script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
