#2 Blended two images

--- a/assets/index.html
+++ b/assets/index.html
@@ -9,8 +9,8 @@
 <body>
   <canvas id="renderCanvas"></canvas>
 
+  <script type="text/javascript" src="hand.js"></script>
   <script type="text/javascript" src="babylon.2.4.max.js"></script>
-  <script type="text/javascript" src="pep.js"></script>
   <script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
